--- a/app/views/prospects/_edit_cps.html.erb
+++ b/app/views/prospects/_edit_cps.html.erb
@@ -4,11 +4,11 @@
     																collection: [
   			  																			'Intro Presentation Scheduled',
   			  																			'SME Presentation Scheduled',
-  			  																			'Supplier Match Meeting Presentation Scheduled',
   			  																			'Waiting for Supplier Data',
+  			  																			'Supplier Match Presentation Scheduled',
   			  																			'Waiting on Agreement',
   			  																			'Closed - Enrollment Scheduled',
-  			  																			'Closed - Group is Effective',
+  			  																			'Closed - Client is Active',
   			  																			'Intro Presentation Given - No Sale',
   			  																			'SME Presentation Done - No Sale',
   			  																			'Supplier Match Presentation Given - No Sale',
