--- a/app/views/prospects/_cps_show.html.erb
+++ b/app/views/prospects/_cps_show.html.erb
@@ -1,21 +1,28 @@
     <% if @prospect.cps_prospect == false %>
-      <%= link_to "Add Commercial Payments Service", cps_path(@prospect), class: "btn btn-info" %>
+      <%= link_to "Add Commercial Payments Service", cps_path(@prospect), class: "btn btn-slate" %>
     <% else %>
+      <p>&nbsp;</p>
       <hr>
+      <p>&nbsp;</p>
       <div class="row">
         <div class="col-md-4">
           <h4><strong>Commercial Payment Solutions</strong></h4>
         </div>
         <div class="col-md-6">
-          <strong>Status: <%= @prospect.cps_status %></strong><br>
-          <strong>Next Action: </strong>
-    		  <% if !@prospect.cps_next_action_date.nil? %>
-      		  <%= @prospect.cps_next_action_date.strftime("%m/%d/%Y") %>
-      		<% end %>
-      		<%= @prospect.cps_next_action %>
+          <br>
+          Status: <em><%= @prospect.cps_status %></em>
         </div>
         <div class="col-md-2">
           <%= link_to "Edit CPS Service", cps_path(@prospect), class: "btn btn-warning" %>      
+        </div>        
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          Next Action: 
+    		  <% if !@prospect.cps_next_action_date.nil? %>
+      		  <em><%= @prospect.cps_next_action_date.strftime("%m/%d/%y") %> - </em>
+      		<% end %>
+      		<em><%= @prospect.cps_next_action %></em>
         </div>
       </div>
   
@@ -24,13 +31,13 @@
       <div class="row">
         <div class="col-md-4">
           Intro Pres Date: <% if !@prospect.cps_intro_presentation_date.nil? %>
-    		  <em><%= @prospect.cps_intro_presentation_date.strftime("%m/%d/%Y") %></em><% end %>
+    		  <em><%= @prospect.cps_intro_presentation_date.strftime("%m/%d/%y") %></em><% end %>
     		  <br>
     		  Intro Presented by: <em><%= @prospect.cps_intro_presenter %></em>  
         </div>
         <div class="col-md-4">
           SME Presentation Date: <% if !@prospect.cps_sme_presentation_date.nil? %>
-    		  <em><%= @prospect.cps_sme_presentation_date.strftime("%m/%d/%Y") %></em><% end %><br>
+    		  <em><%= @prospect.cps_sme_presentation_date.strftime("%m/%d/%y") %></em><% end %><br>
     		  Subject Matter Expert: <em><%= @prospect.cps_sme %></em>
         </div>
         <div class="col-md-4">
@@ -43,11 +50,11 @@
       <div class="row">
         <div class="col-md-4">
           Proposal Meeting: <% if !@prospect.cps_supplier_match_meeting_date.nil? %>
-    		  <em><%= @prospect.cps_supplier_match_meeting_date.strftime("%m/%d/%Y") %></em><% end %>  
+    		  <em><%= @prospect.cps_supplier_match_meeting_date.strftime("%m/%d/%y") %></em><% end %>  
         </div>      
         <div class="col-md-4">
           Agreement Date: <% if !@prospect.cps_agreement_date.nil? %>
-    			<em><%= @prospect.cps_agreement_date.strftime("%m/%d/%Y") %></em><% end %>
+    			<em><%= @prospect.cps_agreement_date.strftime("%m/%d/%y") %></em><% end %>
         </div>
         <div class="col-md-4">
       		AP Converted to VC: <em><%= number_to_currency(@prospect.cps_converted_ap, precision: 0) %></em>
@@ -58,9 +65,9 @@
       
       <div class="row">
         <div class="col-md-12">
-          <strong>Comments</strong>
-      		<!--<p><#%= render @prospect.comments %></p>-->
+          Comments:
           <%= render @prospect.comments.where.not(cps_content: nil) %>
+          <br>
           <br>
           <%= render 'comments/cps_form' %>
         </div>
