--- a/app/views/prospects/_hcs_show.html.erb
+++ b/app/views/prospects/_hcs_show.html.erb
@@ -1,21 +1,28 @@
     <% if @prospect.hcs_prospect == false %>
-      <%= link_to "Add HealthCare Savings Service", hcs_path(@prospect), class: "btn btn-info" %>
+      <%= link_to "Add HealthCare Savings Service", hcs_path(@prospect), class: "btn btn-slate" %>
     <% else %>
+      <p>&nbsp;</p>
       <hr>
+      <p>&nbsp;</p>
       <div class="row">
         <div class="col-md-4">
           <h4><strong>HealthCare Savings</strong></h4>
         </div>
         <div class="col-md-6">
-          <strong>Status: <%= @prospect.hcs_status %></strong><br>
-          <strong>Next Action: </strong>
-    		  <% if !@prospect.hcs_next_action_date.nil? %>
-      		  <%= @prospect.hcs_next_action_date.strftime("%m/%d/%Y") %>
-      		<% end %>
-      		<%= @prospect.hcs_next_action %>
+          <br>
+          Status: <em><%= @prospect.hcs_status %></em>
         </div>
         <div class="col-md-2">
           <%= link_to "Edit HCS Service", hcs_path(@prospect), class: "btn btn-warning" %>      
+        </div>        
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          Next Action: 
+    		  <% if !@prospect.hcs_next_action_date.nil? %>
+      		  <em><%= @prospect.hcs_next_action_date.strftime("%m/%d/%y") %> - </em>
+      		<% end %>
+      		<em><%= @prospect.hcs_next_action %></em>
         </div>
       </div>
   
@@ -38,13 +45,13 @@
       <div class="row">
         <div class="col-md-6">
           Intro Pres Date: <% if !@prospect.hcs_intro_presentation_date.nil? %>
-    		  <em><%= @prospect.hcs_intro_presentation_date.strftime("%m/%d/%Y") %></em><% end %>
+    		  <em><%= @prospect.hcs_intro_presentation_date.strftime("%m/%d/%y") %></em><% end %>
     		  <br>
     		  Intro Presented by: <em><%= @prospect.hcs_intro_presenter %></em>  
         </div>
         <div class="col-md-6">
           SME Presentation Date: <% if !@prospect.hcs_sme_presentation_date.nil? %>
-    		  <em><%= @prospect.hcs_sme_presentation_date.strftime("%m/%d/%Y") %></em><% end %><br>
+    		  <em><%= @prospect.hcs_sme_presentation_date.strftime("%m/%d/%y") %></em><% end %><br>
     		  Subject Matter Expert: <em><%= @prospect.hcs_sme %></em>
         </div>
       </div>
@@ -54,11 +61,11 @@
       <div class="row">
         <div class="col-md-4">
           Proposal Meeting: <% if !@prospect.hcs_proposal_meeting_date.nil? %>
-    		  <em><%= @prospect.hcs_proposal_meeting_date.strftime("%m/%d/%Y") %></em><% end %>  
+    		  <em><%= @prospect.hcs_proposal_meeting_date.strftime("%m/%d/%y") %></em><% end %>  
         </div>      
         <div class="col-md-4">
           Agreement Date: <% if !@prospect.hcs_agreement_date.nil? %>
-    			<em><%= @prospect.hcs_agreement_date.strftime("%m/%d/%Y") %></em><% end %>
+    			<em><%= @prospect.hcs_agreement_date.strftime("%m/%d/%y") %></em><% end %>
         </div>
         <div class="col-md-4">
           New Cost: <em><%= number_to_currency(@prospect.hcs_new_cost, precision: 0) %></em>
@@ -68,11 +75,9 @@
   
       <br>
 
-      
       <div class="row">
         <div class="col-md-12">
-          <strong>HealthCare Savings Comments</strong>
-      		<!--<p><#%= render @prospect.comments %></p>-->
+          Comments
           <%= render @prospect.comments.where.not(hcs_content: nil) %>
           <br>
           <%= render 'comments/hcs_form' %>
