downgrade ruby for heroku

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -27,14 +27,13 @@
 
 
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle navbar-select" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle navbar-select" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <i class="glyphicon glyphicon-education"></i> Training & Docs
                 </a>
                 <div class="dropdown-menu navbar-select" aria-labelledby="navbarDropdown">
-                  <p><%= link_to "Home", home_path %></p>
-                  <p><%= link_to "Commercial Payment Solutions", commercial_payments_path %></p>
+                  <p><%= link_to "Commercial Payments", commercial_payments_path %></p>
                   <p><%= link_to "Instant Pay", instant_pay_path %></p>
-                  <p><%= link_to "Home", healthcare_savings_path %></p>
+                  <p><%= link_to "HealthCare Savings", healthcare_savings_path %></p>
                 </div>
               </li>
       
