--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -141,6 +141,7 @@ nav .navbar-nav li a:hover {
 
 .navbar-select {
     text-shadow: none;
+   	text-decoration: none;
     background: #333;
     color: #fff;
 }
@@ -237,47 +238,71 @@ nav .navbar-nav li a:hover {
 }
 
 .dashboard-bckg-1 {
-	background-color: #5CBAE6;
+	background-color: #4318f0;
 }
 
 .dashboard-bckg-2 {
-	background-color: #B6D957;
+	background-color: #f09918;
 }
 
-.dashboard-bckg-3 {
-	background-color: #FAC364;
+.dashboard-bckg-1-1 {
+	background-color: #764c5e;
 }
 
-.dashboard-bckg-4 {
-	background-color: #FF0080;
+.dashboard-bckg-1-2 {
+	background-color: #479761;
 }
 
-.dashboard-bckg-5 {
-	background-color: #FBA100;
+.dashboard-bckg-1-3 {
+	background-color: #CEBC81;
 }
 
-.dashboard-bckg-6 {
-	background-color: #5CBAE6;
+.dashboard-bckg-1-4 {
+	background-color: #A16E83;
 }
 
-.dashboard-bckg-7 {
-	background-color: #b96eff;
+.dashboard-bckg-1-5 {
+	background-color: #B19F9E;
 }
 
-.dashboard-bckg-8 {
-	background-color: #DBDB46;
+.dashboard-bckg-2-1 {
+	background-color: #5F6366;
 }
 
-.dashboard-bckg-9 {
-	background-color: #B4A198;
+.dashboard-bckg-2-2 {
+	background-color: #4D6D9A;
 }
 
-.dashboard-bckg-10 {
-	background-color: #98AAFB;
+.dashboard-bckg-2-3 {
+	background-color: #86B3D1;
 }
 
-.dashboard-bckg-11 {
-	background-color: #FF4D4D;
+.dashboard-bckg-2-4 {
+	background-color: #99CED3;
+}
+
+.dashboard-bckg-2-5 {
+	background-color: #EDB5BF;
+}
+
+.dashboard-bckg-3-1 {
+	background-color: #844D36;
+}
+
+.dashboard-bckg-3-2 {
+	background-color: #474853;
+}
+
+.dashboard-bckg-3-3 {
+	background-color: #86B3D1;
+}
+
+.dashboard-bckg-3-4 {
+	background-color: #AAA0A0;
+}
+
+.dashboard-bckg-3-5 {
+	background-color: #8E8268;
 }
 
 // End Dashboard Styles
