--- a/app/views/prospects/dashboard.html.erb
+++ b/app/views/prospects/dashboard.html.erb
@@ -21,13 +21,12 @@
 			</div>
 		</div>
 
-
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
-
+		
 		<div class="row">
 			<div class="col-md-12">
-				<div class="well dashboard-panel dashboard-bckg-1 ">
+				<div class="well dashboard-panel dashboard-bckg-1-1 ">
 					<h1 align="center">Commercial Payment Solutions</h1>
 				</div>
 			</div>
@@ -38,7 +37,7 @@
 			<div class="col-md-4">
 				<div class="row">
 					<div class="col-md-12">				
-						<div class="well dashboard-panel dashboard-bckg-6">
+						<div class="well dashboard-panel dashboard-bckg-1-2">
 							<h1 align="center"><%= @prospects.where(cps_prospect: true).count - cps_all_closed %></h1>
 							<h4 align="center">Total Open Commercial Payment Opportunities</h4>
 						</div>
@@ -46,7 +45,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12">				
-						<div class="well dashboard-panel dashboard-bckg-6">
+						<div class="well dashboard-panel dashboard-bckg-1-3">
 							<h1 align="center"><%= @prospects.where(cps_prospect: true).count %></h1>
 							<h4 align="center">Total Commercial Payment Prospects in CRM</h4>
 						</div>				
@@ -55,7 +54,7 @@
 			</div>
 
 			<div class="col-md-4">
-				<div class="well dashboard-panel dashboard-bckg-6">
+				<div class="well dashboard-panel dashboard-bckg-1-4">
 					<h3 align="center">Prospects Status:</h4>
 					<h4>
 						&nbsp; &nbsp; &nbsp; &nbsp; <%= @prospects.where(cps_status: "Intro Presentation Scheduled").count %>&nbsp; Intro Presentations Scheduled<br>
@@ -74,7 +73,7 @@
 			</div>
 	
 			<div class="col-md-4">
-				<div class="well dashboard-panel dashboard-bckg-6">
+				<div class="well dashboard-panel dashboard-bckg-1-5">
 					<h3 align="center">Following Up In:</h4>
 					<h4>
 						&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<%= @prospects.where(cps_status: "Follow up in January").count %>&nbsp; January<br>
@@ -96,10 +95,10 @@
 
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
-
+		
 		<div class="row">
 			<div class="col-md-12">
-				<div class="well dashboard-panel dashboard-bckg-1 ">
+				<div class="well dashboard-panel dashboard-bckg-2-1 ">
 					<h1 align="center">Instant Pay</h1>
 				</div>
 			</div>
@@ -110,7 +109,7 @@
 			<div class="col-md-4">
 				<div class="row">
 					<div class="col-md-12">				
-						<div class="well dashboard-panel dashboard-bckg-6">
+						<div class="well dashboard-panel dashboard-bckg-2-2">
 							<h1 align="center"><%= @prospects.where(pay_prospect: true).count - pay_all_closed %></h1>
 							<h4 align="center">Total Open Instant Pay Opportunities</h4>
 						</div>
@@ -118,7 +117,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12">				
-						<div class="well dashboard-panel dashboard-bckg-6">
+						<div class="well dashboard-panel dashboard-bckg-2-3">
 							<h1 align="center"><%= @prospects.where(pay_prospect: true).count %></h1>
 							<h4 align="center">Instant Pay Prospects in CRM</h4>
 						</div>				
@@ -127,7 +126,7 @@
 			</div>
 
 			<div class="col-md-4">
-				<div class="well dashboard-panel dashboard-bckg-6">
+				<div class="well dashboard-panel dashboard-bckg-2-4">
 					<h3 align="center">Instant Pay Prospects Status:</h4>
 					<h4>
 						&nbsp; &nbsp; &nbsp; &nbsp; <%= @prospects.where(pay_status: "Intro Presentation Scheduled").count %>&nbsp; Intro Presentations Scheduled<br>
@@ -143,7 +142,7 @@
 	
 	
 			<div class="col-md-4">
-				<div class="well dashboard-panel dashboard-bckg-6">
+				<div class="well dashboard-panel dashboard-bckg-2-5">
 					<h3 align="center">Following Up In:</h4>
 					<h4>
 						&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<%= @prospects.where(pay_status: "Follow up in January").count %>&nbsp; January<br>
@@ -165,10 +164,11 @@
 
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
-
+		<p>&nbsp;</p>
+		
 		<div class="row">
 			<div class="col-md-12">
-				<div class="well dashboard-panel dashboard-bckg-1 ">
+				<div class="well dashboard-panel dashboard-bckg-3-1 ">
 					<h1 align="center">HealthCare Savings</h1>
 				</div>
 			</div>
@@ -179,7 +179,7 @@
 			<div class="col-md-4">
 				<div class="row">
 					<div class="col-md-12">				
-						<div class="well dashboard-panel dashboard-bckg-6">
+						<div class="well dashboard-panel dashboard-bckg-3-2">
 							<h1 align="center"><%= @prospects.where(hcs_prospect: true).count - hcs_all_closed %></h1>
 							<h4 align="center">Total Open HealthCare Opportunities</h4>
 						</div>
@@ -187,7 +187,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12">				
-						<div class="well dashboard-panel dashboard-bckg-6">
+						<div class="well dashboard-panel dashboard-bckg-3-3">
 							<h1 align="center"><%= @prospects.where(hcs_prospect: true).count %></h1>
 							<h4 align="center">Total HealthCare Prospects in CRM</h4>
 						</div>				
@@ -196,7 +196,7 @@
 			</div>
 
 			<div class="col-md-4">
-				<div class="well dashboard-panel dashboard-bckg-6">
+				<div class="well dashboard-panel dashboard-bckg-3-4">
 					<h3 align="center">HealthCare Prospects Status:</h4>
 					<h4>
 						&nbsp; &nbsp; &nbsp; &nbsp; <%= @prospects.where(hcs_status: "Intro Presentation Scheduled").count %>&nbsp; Intro Presentations Scheduled<br>
@@ -216,7 +216,7 @@
 	
 	
 			<div class="col-md-4">
-				<div class="well dashboard-panel dashboard-bckg-6">
+				<div class="well dashboard-panel dashboard-bckg-3-5">
 					<h3 align="center">Following Up In:</h4>
 		
 					<h4>
@@ -236,94 +236,6 @@
 			</div>
 
 		</div>
-
-
-
-
-
-
-
-
-
-
-		<div class="col-md-3">
-			<div class="well dashboard-panel dashboard-bckg-4 ">
-				<h1 align="center"><%= @prospects.where(hcs_status: "Intro Presentation Scheduled").count %></h1>
-				<p>&nbsp;</p>
-				<h4 align="center">Intro Presentation Scheduled</h4>
-			</div>
-		</div>
-		
-		<div class="col-md-3">
-			<div class="well dashboard-panel dashboard-bckg-5 ">
-			<h1 align="center"><%= @prospects.where(hcs_status: "Fact Finding Call Scheduled").count %></h1>
-			<p>&nbsp;</p>
-			<h4 align="center">Fact Finding Call Scheduled</h4>
-			</div>
-		</div>
-	
-		<div class="col-md-3">
-			<div class="well dashboard-panel dashboard-bckg-6 ">
-				<h1 align="center"><%= @prospects.where(hcs_status: "Proposal Meeting Scheduled").count %></h1>
-				<p>&nbsp;</p>
-				<h4 align="center">Proposal Meeting Scheduled</h4>
-			</div>
-		</div>
-	
-		<div class="col-md-3">
-			<div class="well dashboard-panel dashboard-bckg-7 ">
-				<h1 align="center"><%= @prospects.where(hcs_status: "Waiting for Claims Data").count %></h1>
-				<p>&nbsp;</p>
-				<h4 align="center">Waiting for Claims Data</h4>
-			</div>
-		</div>
-	
-		<div class="col-md-3">
-			<div class="well dashboard-panel dashboard-bckg-8 ">
-				<h1 align="center"><%= @prospects.where(hcs_status: "Waiting on Agreement").count %></h1>
-				<p>&nbsp;</p>
-				<h4 align="center">Waiting on Agreement</h4>
-			</div>
-		</div>
-		
-		<div class="col-md-3">
-			<div class="well dashboard-panel dashboard-bckg-9 ">
-				<h1 align="center"><%= @prospects.where(hcs_status: "Closed - Enrollment Scheduled").count %></h1>
-				<p>&nbsp;</p>
-				<h4 align="center">Closed - Enrollment Scheduled</h4>
-			</div>
-		</div>			
-		
-		<div class="col-md-3">
-			<div class="well dashboard-panel dashboard-bckg-10 ">
-				<h1 align="center"><%= @prospects.where(hcs_status: "Closed - Group is Effective").count %></h1>
-				<p>&nbsp;</p>
-				<h4 align="center">Closed - Group is Effective</h4>
-			</div>
-		</div>
-
-
-
-		<div class="col-md-3">
-			<div class="well dashboard-panel dashboard-bckg-6">
-				<h3 align="center">Follow up in:</h4>
-	
-				<h4>
-					&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<%= @prospects.where(hcs_status: "Follow up in January").count %>&nbsp; January<br>
-					&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<%= @prospects.where(hcs_status: "Follow up in February").count %>&nbsp;  February<br>
-					&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<%= @prospects.where(hcs_status: "Follow up in March").count %>&nbsp;  March<br>
-					&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<%= @prospects.where(hcs_status: "Follow up in April").count %>&nbsp;  April<br>
-					&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<%= @prospects.where(hcs_status: "Follow up in May").count %>&nbsp;  May<br>
-					&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<%= @prospects.where(hcs_status: "Follow up in June").count %>&nbsp;  June<br>
-					&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<%= @prospects.where(hcs_status: "Follow up in July").count %>&nbsp;  July<br>
-					&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<%= @prospects.where(hcs_status: "Follow up in August").count %>&nbsp;  August<br>
-					&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<%= @prospects.where(hcs_status: "Follow up in September").count %>&nbsp;  September<br>
-					&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<%= @prospects.where(hcs_status: "Follow up in October").count %>&nbsp;  October<br>
-					&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<%= @prospects.where(hcs_status: "Follow up in November").count %>&nbsp;  November<br>
-					&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<%= @prospects.where(hcs_status: "Follow up in December").count %>&nbsp;  December</h4>
-			</div>
-		</div>
-
 
 	</div>
 	
