--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -33,7 +33,7 @@
                 <div class="dropdown-menu navbar-select" aria-labelledby="navbarDropdown">
                   <p><%= link_to "Commercial Payments", commercial_payments_path %></p>
                   <p><%= link_to "Instant Pay", instant_pay_path %></p>
-                  <p><%= link_to "HealthCare Savings", healthcare_savings_path %></p>
+                  <!--<p><%#= link_to "HealthCare Savings", healthcare_savings_path %></p>-->
                 </div>
               </li>
       
