--- a/app/views/prospects/index.html.erb
+++ b/app/views/prospects/index.html.erb
@@ -34,27 +34,26 @@
 		  	<tr class="bordered">
 		  		<td colspan="3"></td>
 		  		<td>&nbsp;</td>		  		
-		  		<td colspan="3">Commercial Payments</td>
+		  		<td colspan="3"><strong>Commercial Payments</strong></td>
+		  		<!--<td>&nbsp;</td>-->
+		  		<!--<td colspan="3"><strong>HealthCare Savings</strong></td>-->
 		  		<td>&nbsp;</td>
-		  		<td colspan="3">HealthCare Savings</td>
-		  		<td>&nbsp;</td>
-		  		<td colspan="3">Instant Pay</td>
+		  		<td colspan="3"><strong>Instant Pay</strong></td>
 		  	</tr>
 
 		    <tr class="bordered">
-		      <td>Consultant</td>
-		      <td>Prospect</td>
-			    <td>Employees</td>
+		      <td><strong>Consultant</strong></td>
+		      <td><strong>Prospect</strong></td>
+			    <td><strong>Employees</strong></td>
 
 			    <td>&nbsp;</td>
 			    
-		      <td>Next Action<br>
-		      Date</td>			      
-		      <td>Next Action</td>
+		      <td><strong>Next Action<br>Date<strong></td>			      
+		      <td><strong>Next Action</strong></td>
 		      <td>
 		      	<div class="status">
 			      	<li class="dropdown">
-							  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Status <span class="caret"></span></a>
+							  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong>Status </strong><span class="caret"></span></a>
 							  <ul class="dropdown-menu dropdown-menu-right status-menu" style="list-style: none;">
 							    <li><%= link_to "All", prospects_path %></li>
 							    <% @pay_status.each do |h| %>
@@ -65,34 +64,32 @@
 						</div>
 					</td>
 
-			    <td>&nbsp;</td>
+			  <!--  <td>&nbsp;</td>-->
 			    
-		      <td>Next Action<br>
-		      Date</td>			      
-		      <td>Next Action</td>
-		      <td>
-		      	<div class="status">
-			      	<li class="dropdown">
-							  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Status <span class="caret"></span></a>
-							  <ul class="dropdown-menu dropdown-menu-right status-menu" style="list-style: none;">
-							    <li><%= link_to "All", prospects_path %></li>
-							    <% @hcs_status.each do |h| %>
-							      <li class="black"><%= link_to "#{h.hcs_status}", prospects_path(hcs_status: h.hcs_status) %></li>
-							    <% end %>
-							  </ul>
-							</li>
-						</div>
-					</td>
+		   <!--   <td><strong>Next Action<br>Date</strong></td>  -->
+		   <!--   <td><strong>Next Action</strong></td>-->
+		   <!--   <td>-->
+		   <!--   	<div class="status">-->
+			  <!--    	<li class="dropdown">-->
+					<!--		  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong>Status </strong><span class="caret"></span></a>-->
+					<!--		  <ul class="dropdown-menu dropdown-menu-right status-menu" style="list-style: none;">-->
+					<!--		    <li><%#= link_to "All", prospects_path %></li>-->
+					<!--		    <%# @hcs_status.each do |h| %>-->
+					<!--		      <li class="black"><%#= link_to "#{h.hcs_status}", prospects_path(hcs_status: h.hcs_status) %></li>-->
+					<!--		    <%# end %>-->
+					<!--		  </ul>-->
+					<!--		</li>-->
+					<!--	</div>-->
+					<!--</td>-->
 
 			    <td>&nbsp;</td>
 
-		      <td>Next Action<br>
-		      Date</td>
-		      <td>Next Action</td>
+		      <td><strong>Next Action<br>Date</strong></td>
+		      <td><strong>Next Action</strong></td>
 		      <td>
 		      	<div class="status">
 			      	<li class="dropdown">
-							  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Status <span class="caret"></span></a>
+							  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong>Status </strong><span class="caret"></span></a>
 							  <ul class="dropdown-menu dropdown-menu-right status-menu" style="list-style: none;">
 							    <li><%= link_to "All", prospects_path %></li>
 							    <% @pay_status.each do |b| %>
@@ -130,16 +127,16 @@
 
 					      <td><%= prospect.cps_status %></td>
 
-								<td>&nbsp;</td>
+								<!--<td>&nbsp;</td>-->
 								
-					      <td><% if !prospect.hcs_next_action_date.nil? %>
-					      			<%= prospect.hcs_next_action_date.strftime("%m/%d/%Y") %>
-					      		<% end %>
-					      </td>
+					   <!--   <td><%# if !prospect.hcs_next_action_date.nil? %>-->
+					   <!--   			<%#= prospect.hcs_next_action_date.strftime("%m/%d/%Y") %>-->
+					   <!--   		<%# end %>-->
+					   <!--   </td>-->
 					      
-					      <td><%= prospect.hcs_next_action %></td>
+					   <!--   <td><%#= prospect.hcs_next_action %></td>-->
 
-					      <td><%= prospect.hcs_status %></td>
+					   <!--   <td><%#= prospect.hcs_status %></td>-->
 					      
 								<td>&nbsp;</td>
 
