--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,10 @@
             <td>Email: </td><td><%= @user.email %></td>
           </tr>
           <tr>
- 
+            <td>Address: &nbsp;&nbsp;<br>&nbsp;</td><td><%= @user.mailing_address %><br>
+                            <%= @user.apt_suite %>
+                            <%= @user.city %>, 
+                        <br>
             </td>
           </tr>
         </table>
