--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
           <tr>
             <td>Address: &nbsp;&nbsp;<br>&nbsp;</td><td><%= @user.mailing_address %><br>
                             <%= @user.apt_suite %>
-                            <%= @user.city %>, 
+                            <%= @user.city %>, <%= @user.state %>  <%= @user.zip %>
                         <br>
             </td>
           </tr>
