--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -14,7 +14,8 @@
         <%= f.input :email, required: true, autofocus: true %>
         <%= f.input :mailing_address, label: 'Mailing Address'  %>
         <%= f.input :apt_suite, label: 'Apt/Suite #'  %>
-
+        <%= f.input :city, label: 'City'  %>
+        <%= f.input :state, collection: STATES %>
         <%= f.input :zip, label: 'ZipCode'  %>
         <%= f.input :password, autocomplete: "off", required: false %>
         <%= f.input :password_confirmation %>
