--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,8 +12,8 @@
         <%= f.input :advisor_phone, label: 'Phone'  %>
         <%= f.input :advisor_mobile, label: 'Mobile'  %>
         <%= f.input :mailing_address, label: 'Mailing Address'  %>
-
-        <%= f.input :city, label: 'City'  %>
+        <%= f.input :apt_suite, label: 'Apt/Suite #'  %>
+        <%#= f.input :city, label: 'City'  %>
         <%= f.input :state, collection: STATES %>
         <%= f.input :zip, label: 'ZipCode'  %>
         <%= f.input :email, required: true, autofocus: true %>
