--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,13 +16,20 @@
           <tr>
             <td>Email: </td><td><%= @user.email %></td>
           </tr>
-          <tr>
-            <td>Address: &nbsp;&nbsp;<br>&nbsp;</td><td><%= @user.mailing_address %><br>
-                            <%= @user.apt_suite %>
-                            <%#= @user.city %>, <%= @user.state %>  <%= @user.zip %>
-                        <br>
-            </td>
-          </tr>
+          <!--<tr>-->
+          <!--  <td>Mailing Address: </td><td><%#= @user.mailing_address %>-->
+          <!--<tr>-->
+          <!--  <td>Apt/Suite: </td><td><%#= @user.apt_suite %></td>-->
+          <!--</tr>-->
+          <!--<tr>-->
+          <!--  <td>City: </td><td><%#= @user.city %></td>-->
+          <!--</tr>-->
+          <!--<tr>-->
+          <!--  <td>State: </td><td><%#= @user.state %></td>-->
+          <!--</tr>-->
+          <!--<tr>-->
+          <!--  <td>Zip: </td><td><%#= @user.zip %></td>-->
+          <!--</tr>-->
         </table>
       </div>
     	<div class="panel-footer">
