--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,11 +13,11 @@
             <%= f.input :advisor_last_name, required: true, label: 'Last Name'  %>
             <%= f.input :advisor_phone, label: 'Phone'  %>
             <%= f.input :advisor_mobile, label: 'Mobile'  %>
-            <%= f.input :mailing_address, label: 'Mailing Address'  %>
-            <%= f.input :apt_suite, label: 'Apt/Suite #'  %>
-            <%= f.input :city, label: 'City'  %>
-            <%= f.input :state, collection: STATES %>
-            <%= f.input :zip, label: 'ZipCode'  %>
+            <%#= f.input :mailing_address, label: 'Mailing Address'  %>
+            <%#= f.input :apt_suite, label: 'Apt/Suite #'  %>
+            <%#= f.input :city, label: 'City'  %>
+            <%#= f.input :state, collection: STATES %>
+            <%#= f.input :zip, label: 'ZipCode'  %>
             <%= f.input :email, required: true  %>
             <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @validatable) %>
             <%= f.input :password_confirmation, required: true %>
