--- a/app/views/prospects/show.html.erb
+++ b/app/views/prospects/show.html.erb
@@ -71,9 +71,9 @@
 
 	      <%= render 'prospects/cps_show' %>
 
-	      <%= render 'prospects/pay_show' %>
+	      <%#= render 'prospects/pay_show' %>
 	      
-	      <%= render 'prospects/hcs_show' %>
+	      <%#= render 'prospects/hcs_show' %>
 
 	</div>
 	
