--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -31,8 +31,11 @@
                   <i class="glyphicon glyphicon-education"></i> Training & Docs
                 </a>
                 <div class="dropdown-menu navbar-select" aria-labelledby="navbarDropdown">
-                  <p><%= link_to "Commercial Payments", commercial_payments_path %></p>
-                  <p><%= link_to "Instant Pay", instant_pay_path %></p>
+                  <p><%= link_to "Coming May 2019", commercial_payments_path %></p>
+                  <p><%= link_to "Coming May 2019", commercial_payments_path %></p>
+                  <p><%= link_to "Coming May 2019", commercial_payments_path %></p>                  
+                  <!--<p><%#= link_to "Commercial Payments", commercial_payments_path %></p>-->
+                  <!--<p><%#= link_to "Instant Pay", instant_pay_path %></p>-->
                   <!--<p><%#= link_to "HealthCare Savings", healthcare_savings_path %></p>-->
                 </div>
               </li>
