--- a/app/views/prospects/index.html.erb
+++ b/app/views/prospects/index.html.erb
@@ -1,5 +1,3 @@
-
-
 <div class="col-md-12">
 	<div class="panel panel-gray">
 	  <div class="panel-heading">
@@ -31,22 +29,22 @@
 		<div class="prospect-show table-responsive">
 			
 			<table class="table index-table table-condensed">
-		  	<tr class="bordered">
-		  		<td colspan="3"></td>
-		  		<td>&nbsp;</td>		  		
-		  		<td colspan="3"><strong>Commercial Payments</strong></td>
-		  		<!--<td>&nbsp;</td>-->
-		  		<!--<td colspan="3"><strong>HealthCare Savings</strong></td>-->
-		  		<td>&nbsp;</td>
-		  		<td colspan="3"><strong>Instant Pay</strong></td>
-		  	</tr>
+		  	<!--<tr class="bordered">-->
+		  	<!--	<td colspan="3"></td>-->
+		  	<!--	<td>&nbsp;</td>		  		-->
+		  	<!--	<td colspan="3"><strong>Commercial Payments</strong></td>-->
+		  	<!--	<td>&nbsp;</td>-->
+		  	<!--	<td colspan="3"><strong>HealthCare Savings</strong></td>-->
+		  	<!--	<td>&nbsp;</td>-->
+		  	<!--	<td colspan="3"><strong>Instant Pay</strong></td>-->
+		  	<!--</tr>-->
 
 		    <tr class="bordered">
 		      <td><strong>Consultant</strong></td>
 		      <td><strong>Prospect</strong></td>
-			    <td><strong>Employees</strong></td>
+			    <!--<td><strong>Employees</strong></td>-->
 
-			    <td>&nbsp;</td>
+			    <!--<td>&nbsp;</td>-->
 			    
 		      <td><strong>Next Action<br>Date<strong></td>			      
 		      <td><strong>Next Action</strong></td>
@@ -82,23 +80,23 @@
 					<!--	</div>-->
 					<!--</td>-->
 
-			    <td>&nbsp;</td>
+			  <!--  <td>&nbsp;</td>-->
 
-		      <td><strong>Next Action<br>Date</strong></td>
-		      <td><strong>Next Action</strong></td>
-		      <td>
-		      	<div class="status">
-			      	<li class="dropdown">
-							  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong>Status </strong><span class="caret"></span></a>
-							  <ul class="dropdown-menu dropdown-menu-right status-menu" style="list-style: none;">
-							    <li><%= link_to "All", prospects_path %></li>
-							    <% @pay_status.each do |b| %>
-							      <li class="black"><%= link_to "#{b.pay_status}", prospects_path(pay_status: b.pay_status) %></li>
-							    <% end %>
-							  </ul>
-							</li>
-						</div>
-					</td>
+		   <!--   <td><strong>Next Action<br>Date</strong></td>-->
+		   <!--   <td><strong>Next Action</strong></td>-->
+		   <!--   <td>-->
+		   <!--   	<div class="status">-->
+			  <!--    	<li class="dropdown">-->
+					<!--		  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong>Status </strong><span class="caret"></span></a>-->
+					<!--		  <ul class="dropdown-menu dropdown-menu-right status-menu" style="list-style: none;">-->
+					<!--		    <li><%#= link_to "All", prospects_path %></li>-->
+					<!--		    <%# @pay_status.each do |b| %>-->
+					<!--		      <li class="black"><%#= link_to "#{b.pay_status}", prospects_path(pay_status: b.pay_status) %></li>-->
+					<!--		    <%# end %>-->
+					<!--		  </ul>-->
+					<!--		</li>-->
+					<!--	</div>-->
+					<!--</td>-->
 				</tr>
 			  
 			  <tbody class="bordered">
@@ -114,9 +112,9 @@
 					     		<em><%= link_to prospect.organization, prospect %></em>
 					      </td>
 								
-					      <td><%= prospect.employees %></td>
+					      <!--<td><%#= prospect.employees %></td>-->
 
-								<td>&nbsp;</td>
+								<!--<td>&nbsp;</td>-->
 								
 					      <td><% if !prospect.cps_next_action_date.nil? %>
 					      			<%= prospect.cps_next_action_date.strftime("%m/%d/%Y") %>
@@ -138,13 +136,13 @@
 
 					   <!--   <td><%#= prospect.hcs_status %></td>-->
 					      
-								<td>&nbsp;</td>
+								<!--<td>&nbsp;</td>-->
 
-					      <td><% if !prospect.pay_next_action_date.nil? %><%= prospect.pay_next_action_date.strftime("%m/%d/%Y") %><% end %></td>
+					   <!--   <td><%# if !prospect.pay_next_action_date.nil? %><%#= prospect.pay_next_action_date.strftime("%m/%d/%Y") %><%# end %></td>-->
 					      
-					      <td><%= prospect.pay_next_action %></td>
+					   <!--   <td><%#= prospect.pay_next_action %></td>-->
 
-					      <td><%= prospect.pay_status %></td>
+					   <!--   <td><%#= prospect.pay_status %></td>-->
 					      
 					    </tr>
 						<% end %>
