--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,12 +46,6 @@
 
 <% if current_user.manager %>
 
-<% total_employees = 0 %>
-<% total_current_cost = 0 %>
-<% total_estimated_new_cost = 0 %>
-<% total_hcs_monthly_savings_fee = 0 %>
-<% total_hcs_pepm_fee = 0 %>
-
 <div class="col-md-12">
   <p>&nbsp;</p>
 	<div class="panel panel-gray">
@@ -80,22 +74,22 @@
 			<div class="prospect-show table-responsive">
 			
 			<table class="table index-table table-condensed">
-		  	<tr class="bordered">
-		  		<td colspan="3"></td>
-		  		<td>&nbsp;</td>		  		
-		  		<td colspan="3"><strong>Commercial Payments</strong></td>
-		  		<!--<td>&nbsp;</td>-->
-		  		<!--<td colspan="3"><strong>HealthCare Savings</strong></td>-->
-		  		<td>&nbsp;</td>
-		  		<td colspan="3"><strong>Instant Pay</strong></td>
-		  	</tr>
+		  	<!--<tr class="bordered">-->
+		  	<!--	<td colspan="3"></td>-->
+		  	<!--	<td>&nbsp;</td>		  		-->
+		  	<!--	<td colspan="3"><strong>Commercial Payments</strong></td>-->
+		  	<!--	<td>&nbsp;</td>-->
+		  	<!--	<td colspan="3"><strong>HealthCare Savings</strong></td>-->
+		  	<!--	<td>&nbsp;</td>-->
+		  	<!--	<td colspan="3"><strong>Instant Pay</strong></td>-->
+		  	<!--</tr>-->
 
 		    <tr class="bordered">
 		      <td><strong>Consultant</strong></td>
 		      <td><strong>Prospect</strong></td>
-			    <td><strong>Employees</strong></td>
+			    <!--<td><strong>Employees</strong></td>-->
 
-			    <td>&nbsp;</td>
+			    <!--<td>&nbsp;</td>-->
 			    
 		      <td><strong>Next Action<br>Date<strong></td>			      
 		      <td><strong>Next Action</strong></td>
@@ -107,11 +101,11 @@
 		   <!--   <td><strong>Next Action</strong></td>-->
 		   <!--   <td><strong>Status</strong></td>-->
 
-			    <td>&nbsp;</td>
+			    <!--<td>&nbsp;</td>-->
 
-		      <td><strong>Next Action<br>Date</strong></td>
-		      <td><strong>Next Action</strong></td>
-		      <td><strong>Status</strong></td>
+		     <!-- <td><strong>Next Action<br>Date</strong></td>-->
+		     <!-- <td><strong>Next Action</strong></td>-->
+		     <!-- <td><strong>Status</strong></td>-->
 				</tr>
 			  
 			  <tbody class="bordered">
@@ -127,9 +121,9 @@
 					     		<em><%= link_to prospect.organization, prospect %></em>
 					      </td>
 								
-					      <td><%= prospect.employees %></td>
+					      <!--<td><%#= prospect.employees %></td>-->
 
-								<td>&nbsp;</td>
+								<!--<td>&nbsp;</td>-->
 								
 					      <td><% if !prospect.cps_next_action_date.nil? %>
 					      			<%= prospect.cps_next_action_date.strftime("%m/%d/%Y") %>
@@ -151,13 +145,13 @@
 
 					   <!--   <td><%#= prospect.hcs_status %></td>-->
 					      
-								<td>&nbsp;</td>
+								<!--<td>&nbsp;</td>-->
 
-					      <td><% if !prospect.pay_next_action_date.nil? %><%= prospect.pay_next_action_date.strftime("%m/%d/%Y") %><% end %></td>
+					   <!--   <td><%# if !prospect.pay_next_action_date.nil? %><%#= prospect.pay_next_action_date.strftime("%m/%d/%Y") %><%# end %></td>-->
 					      
-					      <td><%= prospect.pay_next_action %></td>
+					   <!--   <td><%#= prospect.pay_next_action %></td>-->
 
-					      <td><%= prospect.pay_status %></td>
+					   <!--   <td><%#= prospect.pay_status %></td>-->
 					      
 					    </tr>
 						<% end %>
