some training vids

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,87 @@
-<div class="container pages">
 
-  <div class="row">
-    <div class="col-md-10 col-md-offset-1">
-      <p>&nbsp;</p>
-      <h3 align="center">Coming May 2019</h3>
-      <p>&nbsp;</p>
+<%# if current_user.group == "bc" || current_user.group == "all" %>
+  
+  <div class="container pages">
 
+    <div class="row">
+      <div class="col-md-8 col-md-offset-1">
+        <h3>Training Videos</h3>
+      </div>
     </div>
+
+    <div class="row">
+      <div class="col-md-6">
+        <div class="embed-responsive embed-responsive-4by3 clearfix">
+          <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/337346213" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="embed-responsive embed-responsive-4by3 clearfix">
+          <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/337349065" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="embed-responsive embed-responsive-4by3 clearfix">
+          <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/337396254" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="embed-responsive embed-responsive-4by3 clearfix">
+          <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+
+    <p>&nbsp;</p>
+    <hr>
+    
+    <div class="row">
+      <div class="col-md-8 col-md-offset-1">
+        <h3>Marketing Videos</h3>
+      </div>
+    </div>
+  
+    <div class="row">
+      <div class="col-md-6">
+        <div class="embed-responsive embed-responsive-4by3 clearfix">
+          <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/272852660" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
+          Shere this link: <a href="https://player.vimeo.com/video/272852660">https://player.vimeo.com/video/320860659</a>
+      </div>
+      <div class="col-md-6">
+        <div class="embed-responsive embed-responsive-4by3 clearfix">
+          <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/320861285" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
+        Shere this link: <a href="https://player.vimeo.com/video/320860659" target="_Blank">https://player.vimeo.com/video/320861285</a>
+      </div>
+    </div>  
+
+    <div class="row">
+      <div class="col-md-6">
+        <div class="embed-responsive embed-responsive-4by3 clearfix">
+          <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/320860659" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
+        Shere this link: <a href="https://player.vimeo.com/video/320860659" target="_Blank">https://player.vimeo.com/video/320860659</a>
+      </div>
+      <div class="col-md-6">
+        <!--<div class="embed-responsive embed-responsive-4by3 clearfix">-->
+        <!--  <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/320861285" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>-->
+        <!--</div>-->
+        <!--Shere this link: <a href="https://player.vimeo.com/video/320860659" target="_Blank">https://player.vimeo.com/video/320861285</a>-->
+      </div>
+    </div>
+  
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+
+    <p>&nbsp;</p>
+  
   </div>
-</div>
+  
+
+<%# else %>
+  <!--Wrong Group-->
+<%# end %>
