add training static pages

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -31,9 +31,9 @@
                   <i class="glyphicon glyphicon-education"></i> Training & Docs
                 </a>
                 <div class="dropdown-menu navbar-select" aria-labelledby="navbarDropdown">
-                  <p><%= link_to "Coming May 2019", commercial_payments_path %></p>
-                  <p><%= link_to "Coming May 2019", commercial_payments_path %></p>
-                  <p><%= link_to "Coming May 2019", commercial_payments_path %></p>                  
+                  <p><%= link_to "Training Videos", cps_training_vids_path %></p>
+                  <p><%= link_to "Steps to Sale", cps_steps_to_sale_path %></p>
+                  <p><%= link_to "Q & A", cps_answers_path %></p>                  
                   <!--<p><%#= link_to "Commercial Payments", commercial_payments_path %></p>-->
                   <!--<p><%#= link_to "Instant Pay", instant_pay_path %></p>-->
                   <!--<p><%#= link_to "HealthCare Savings", healthcare_savings_path %></p>-->
