--- a/app/views/pages/cps_answers.html.erb
+++ b/app/views/pages/cps_answers.html.erb
@@ -4,6 +4,9 @@
     <div class="col-md-10 col-md-offset-1">
 
       <h3>Commercial Payments Solutions (Virtual Card Payments) Q & A</h3>
+      <p><em>Watch for many updates coming throughout June 2019</em></p>     
+      
+      <p>&nbsp;</p>
        <p><strong><font color="#333333" face="Helvetica, sans-serif">Might my suppliers raise my prices to cover the credit card processing fee?</font></strong><br></p>
       
       <p><font color="#333333" face="Helvetica, sans-serif">Not very likely. If the suppliers have that intention they will tell the enrollment specialist that they intend to include a surcharge in return for acceptance. At that point, the enrollment specialist will notate the lead and mark this as Lost. This happens approximately 5% of the time. We find that those that enroll for acceptance do so openly and without deception. With that said, there are times that suppliers will rescind their enrollment at a later date due to cost concerns.</font><br>
