--- a/app/views/pages/cps_steps_to_sale.html.erb
+++ b/app/views/pages/cps_steps_to_sale.html.erb
@@ -5,7 +5,7 @@
     <div class="col-md-10 col-md-offset-1">
 
       <h3>Steps to the Virtual Card Payment Sale</h3>
-      
+      <p><em>Watch for many updates coming throughout June 2019</em></p>      
       <p>&nbsp;</p>
       
       <ol type="1">
