--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,38 +5,11 @@
 
     <div class="row">
       <div class="col-md-8 col-md-offset-1">
-        <h3>Training Videos</h3>
+        <p><em>Watch for many updates coming throughout June 2019</em></p>
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-md-6">
-        <div class="embed-responsive embed-responsive-4by3 clearfix">
-          <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/337346213" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="embed-responsive embed-responsive-4by3 clearfix">
-          <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/337349065" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        <div class="embed-responsive embed-responsive-4by3 clearfix">
-          <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/337396254" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="embed-responsive embed-responsive-4by3 clearfix">
-          <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        </div>
-      </div>
-    </div>
-
-    <p>&nbsp;</p>
-    <hr>
-    
+      
     <div class="row">
       <div class="col-md-8 col-md-offset-1">
         <h3>Marketing Videos</h3>
